--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profile-app",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "version": "1.0.0",
   "scripts": {
     "ios": "expo run:ios",
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@2060.io/credo-ts-didcomm-user-profile": "^0.0.6",
     "@animo-id/react-native-ble-didcomm": "^0.9.2",
     "@credo-ts/askar": "^0.5.11",
     "@credo-ts/core": "^0.5.11",
@@ -25,6 +26,7 @@
     "@hyperledger/aries-askar-react-native": "^0.2.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-camera": "^15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
